--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <header>
-        <img src="./RG_photo.jpg" alt="Your Profile Picture" class="profile-picture">
+        <img src="./RG_photo.jpeg" alt="Your Profile Picture" class="profile-picture">
         <div class="header-content">
            <h1>GANESH R</h1>
            <p>Software developer</p>                                          
